[tool.poetry]
name = "pythoneda-shared-git"
version = "0.0.1a1"
description = "Shared kernel for git concepts"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-shared/git"
packages = [{include = "pythonedasharedgit"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a15"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
